@@ -1,4 +1,5 @@
 * 1.5rc3
+    - complete fix to hosts backend's logic for temporary files (thanks Cameos)
     - fix man page's blacklisting section
     - make blacklisting work from first blocking
     - performance and responsiveness improvements to the Log Sucker
